# ZisK-BPF

./: .gitignore  ARCHITECTURE.md  Cargo.toml  OPCODE_STATUS.md  README.md  build.rs  chat_history.md  debug_input.rs  execution_trace.json  extract_bpf_bytecode.py  mathematical_proof.json  simple_test.bpf  simple_test.rs  test_extracted_programs.sh  test_mega_opcodes.py  test_memory_operations.py  test_program.py  test_ultimate_opcodes.py  test_week1_proof.py  zisk_input_preview.json
Archived/: OPCODE_STATUS.md  README.md  convert_bpf_to_input.py  cpi_enhanced_trace.json  detailed_code_analysis.md  enhanced_bpf_loader.rs.backup  enhanced_trace.json  execution_trace.json  extract_opcode_sequence.py  fake_vs_real_analysis.md  generate_zisk_proof.sh  main_zisk.rs  opcode_implementations.rs.backup  opcode_sequence.txt  output  sol_invoke_constraints_summary.json  sol_invoke_signed_prover.rs.backup2  test_all_opcodes.py  test_bitwise_operations.py  test_deserialize.rs  test_mov_program.py  test_program.bpf  test_real_bpf.py  test_serialization.rs  test_simple_proof.py  test_zisk.sh
analysis/: EXECUTIVE_SUMMARY.md  README.md  change_log.md  chat_history_analysis.md  current_state_summary.md  repository_analysis.md  technical_implementation.md
bpf_decoder/: Test.so_executable_0_offset_12f0.bpf  Test.so_executable_0_offset_1708.bpf  Test.so_executable_0_offset_198.bpf  Test.so_executable_0_offset_1b70.bpf  Test.so_executable_0_offset_1b78.bpf  Test.so_executable_0_offset_1bd8.bpf  Test.so_executable_0_offset_1be0.bpf  Test.so_executable_0_offset_1c88.bpf  Test.so_executable_0_offset_1d20.bpf  Test.so_executable_0_offset_1d68.bpf  Test.so_executable_0_offset_1da8.bpf  Test.so_executable_0_offset_1dc0.bpf  Test.so_executable_0_offset_1dd0.bpf  Test.so_executable_0_offset_1df0.bpf  Test.so_executable_0_offset_1e48.bpf  Test.so_executable_0_offset_1f20.bpf  Test.so_executable_0_offset_1fe0.bpf  Test.so_executable_0_offset_2018.bpf  Test.so_executable_0_offset_22d0.bpf  Test.so_executable_0_offset_22d8.bpf  Test.so_executable_0_offset_2368.bpf  Test.so_executable_0_offset_2370.bpf  Test.so_executable_0_offset_2410.bpf  Test.so_executable_0_offset_2508.bpf  Test.so_executable_0_offset_25e0.bpf  Test.so_executable_0_offset_25f8.bpf  Test.so_executable_0_offset_2638.bpf  Test.so_executable_0_offset_2658.bpf  Test.so_executable_0_offset_2660.bpf  Test.so_executable_0_offset_26b8.bpf  Test.so_executable_0_offset_26f8.bpf  Test.so_executable_0_offset_2740.bpf  Test.so_executable_0_offset_2750.bpf  Test.so_executable_0_offset_2758.bpf  Test.so_executable_0_offset_2778.bpf  Test.so_executable_0_offset_27f8.bpf  Test.so_executable_0_offset_2860.bpf  Test.so_executable_0_offset_2890.bpf  Test.so_executable_0_offset_2b10.bpf  Test.so_executable_0_offset_2b40.bpf  (+332 more)
(+317 files in other folders)
