[package]
name = "zisk_solana_prover"
version = "0.1.0"
edition = "2021"
default-run = "zisk_solana_prover"

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0"
once_cell = "1.19.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[build-dependencies]
anyhow = "1.0"
bincode = "1.3.3"

# Build script to automatically generate bpf_execution_result.bin
[build]
script = "build.rs"

[[bin]]
name = "zisk_solana_prover"
path = "src/main.rs"

[[bin]]
name = "create_test_program"
path = "src/tests/create_test_program.rs"

[[bin]]
name = "test_bpf_runner"
path = "src/tests/test_bpf_runner.rs"

[[bin]]
name = "run_bpf_executor"
path = "src/tests/run_bpf_executor.rs"

[[bin]]
name = "test_mathematical_proof"
path = "src/tests/test_mathematical_proof.rs"

[[bin]]
name = "test_cpi"
path = "src/tests/test_cpi.rs"

[[bin]]
name = "bpf_prover_tests"
path = "src/tests/bpf_prover_tests.rs"

[profile.release]
panic = "abort"
